# keyspider

./: .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: types.ts  websocket.ts
frontend/src/hooks/: useGraph.ts  useWebSocket.ts
frontend/src/pages/: Agents.tsx  Alerts.tsx  Dashboard.tsx  GraphExplorer.tsx  KeyDetail.tsx  Keys.tsx  Login.tsx  Reports.tsx  Scanner.tsx  ServerDetail.tsx  Servers.tsx  Settings.tsx  Watcher.tsx
src/alembic/: env.py
src/keyspider/: __init__.py  config.py  dependencies.py  main.py
src/keyspider/agent/: keyspider_agent.py
src/keyspider/api/: agent_receiver.py  agents.py  auth.py  graph.py  keys.py  reports.py  router.py  scans.py  servers.py  watch.py  ws.py
src/keyspider/cli/: __init__.py  db_commands.py  key_commands.py  main.py  report_commands.py  scan_commands.py  server_commands.py  user_commands.py  watch_commands.py
src/keyspider/core/: agent_manager.py  fingerprint.py  graph_builder.py  watcher.py  (+6 more)
tests/: conftest.py
tests/fixtures/: sample_auth_log_debian.txt  sample_auth_log_rhel.txt  sample_syslog_aix.txt
tests/integration/: test_agent_receiver.py  test_api.py  test_scan_workflow.py  test_ssh_connector.py
tests/unit/: test_agent_manager.py  test_connection_pool.py  test_fingerprint.py  test_graph_layers.py  test_key_scanner.py  test_log_parser.py  test_sftp_reader.py  test_spider_engine.py  test_sudo_parser.py
(+44 files in other folders)
